fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,8 @@
+body{
+padding: 0;
+margin: 0;
+}
+
 h1 {
 font-family: Avenir Next;
 font-size: 4em;
